Fixed clipboard input element bug: z-index:-1;

--- a/css/popup.css
+++ b/css/popup.css
@@ -34,4 +34,6 @@ body
 #clipboard
 {
 	opacity:-1;
+	position:absolute;
+	z-index:-1;
 }
